--- a/index.html
+++ b/index.html
@@ -1,12 +1,72 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<style>
+		body {
+			width: 0;
+			padding: 0;
+		}
+		.container {
+			background: gray;
+			width: 100vw;
+			height: 100vh;
+		}
+		.parent {
+			background: red;
+			height: 64px;
+			display: flex;
+			justify-content: space-between;
+		}
+		.logo {
+			background: blue;
+			width: 110px;
+			height: 100%;
+
+		}
+		.menu_right {
+			background: yellow;
+			display: flex;
+			align-items: center;
+
+		}
+		.menu_item {
+			background: purple;
+			widht: 72px;
+		}
+
+		.item {
+			background: #0bd;
+			color: #fff;
+			margin: 10px;
+			padding: 10px;
+		}
+		</style>	
 </head>
 <body>
-    abcdefg
+	<div class="container">
+		<div class="parent">
+			<div class="logo">
+				LOGO
+			</div>
+			<div class="menu_right">
+				<div class="menu_item">
+					お知らせ
+				</div>
+				<div class="menu_item">
+					ログイン
+				</div>
+				<div class="menu_item">
+					会員登録
+				</div>
+				<div class="menu_item">
+					出品
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
