--- a/square.html
+++ b/square.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1. shrink-to-fit=no">
-   
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style> 
-    #square {
-       width: 200px;
-       height: 200px;
-       background-color: blue;
-    } 
-    </style>
+    <link href="square.css " rel=" stylesheet " type="text/css">
 </head>
-
-<body style="background-color: grey;">
-     <h1 style="text-align: center; font-size: 200px;">Shapes</h1>
-    <div id="square"></div>
 <body>
-    
+    <div>test</div>
+    <div>test</div>
+    <div>test</div>
+    <div>test</div>
+    <div>test</div>
+    <div>test</div>
+</body>
 </html>
