--- a/square.html
+++ b/square.html
@@ -8,11 +8,13 @@
     <link href="square.css " rel=" stylesheet " type="text/css">
 </head>
 <body>
-    <div>test</div>
-    <div>test</div>
-    <div>test</div>
-    <div>test</div>
-    <div>test</div>
-    <div>test</div>
+    <div>
+    <img src="m63811952081_1.jpeg">
+    </div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
 </body>
 </html>
